fix the inlining and comments for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,53 @@ h1, h2 {
   text-align: center;
 }
 
-/*====================================== Buttons ======================================*/
+#groomingPackage {
+  font-size: 1.3em;
+  font-family: 'Raleway', sans-serif;
+  color: #2c3e50; 
+  text-align: left;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-transform: uppercase; 
+  letter-spacing: 2px;
+}
+
+#serviceAndPrice {
+  border-bottom: 3px dotted #ccc;
+}
+
+#serviceName {
+  font-family: 'Pacifico', cursive;
+  font-size: 1.5rem;
+  color: #2c3e50;
+}
+
+#servicePrice {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #e67e22;
+}
+
+#serviceName {
+  font-family: 'Pacifico', cursive;
+  font-size: 1.5rem;
+  color: #2c3e50;
+}
+
+#servicePrice {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #e67e22;
+}
+
+#privacyPolicy h2{
+  font-family: 'Roboto', sans-serif;
+  text-align: left;
+}
+
+/*====================================== Custom Buttons ======================================*/
 .custom-btn-primary-lg {
   font-size: 15px;
   text-decoration: none;
@@ -142,7 +188,7 @@ h1, h2 {
   background-color: #fff;
   color: #363636;
   padding: 3px 20px;
-  border: 3px solid #d4af37;
+  border: 2px solid #d4af37;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -202,6 +248,7 @@ nav .nav-link.active::after {
   width: 80%;
 }
 
+/*=============== Google icon menu and close button modification =============== */
 .e5cd {
   background-color: transparent;
   border: none;                   
@@ -302,19 +349,6 @@ nav .nav-link.active::after {
   border-bottom: 3px dotted #ccc;
 }
 
-#serviceName {
-  font-family: 'Pacifico', cursive;
-  font-size: 1.5rem;
-  color: #2c3e50;
-}
-
-#servicePrice {
-  font-family: 'Lato', sans-serif;
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #e67e22;
-}
-
 #conSec {
   background-image: url('../images/background\(5\).webp');
   background-size: cover;
@@ -394,16 +428,12 @@ nav .nav-link.active::after {
   max-width: 800px;
 }
 
-#privacyPolicy h2{
-  font-family: 'Roboto', sans-serif;
-  text-align: left;
-}
-
 
 footer {
   background-color: #d4af37;
 }
 
+/*====================================== For tablet ======================================*/
 @media (max-width: 768px) {
 
   .logo {
@@ -471,7 +501,7 @@ footer {
   }
 }
 
-/* For small screens (mobile) */
+/*====================================== For mobile ======================================*/
 @media (max-width: 480px) {
   #custom-width {
     width: 75%;
